# gems-n-rocks

./: CMakeLists.txt  README.md
data/animations/: bomb_explode.anim  dynamite_collect.anim  dynamite_explode.anim  dynamite_lit.anim  enemy_explode.anim  enemy_run_d.anim  enemy_run_l.anim  enemy_run_r.anim  enemy_run_u.anim  enemy_spin_dl.anim  enemy_spin_dr.anim  enemy_spin_ld.anim  enemy_spin_lu.anim  enemy_spin_rd.anim  enemy_spin_ru.anim  enemy_spin_ul.anim  enemy_spin_ur.anim  exit_open_idle.anim  fall64.anim  fall_l.anim  fall_l64.anim  fall_r.anim  fall_r64.anim  gem_burn.anim  gem_collect.anim  gun_collect.anim  key_collect.anim  man_dig_d.anim  man_dig_l.anim  man_dig_r.anim  man_dig_u.anim  man_explode.anim  man_fall.anim  man_lay_item_d.anim  man_lay_item_l.anim  man_lay_item_r.anim  man_lay_item_u.anim  man_pistol_d.anim  man_pistol_l.anim  man_pistol_r.anim  (+16 more)
data/levels/: 1.lvl  10.lvl  11.lvl  12.lvl  13.lvl  14.lvl  15.lvl  16.lvl  17.lvl  18.lvl  19.lvl  2.lvl  20.lvl  3.lvl  4.lvl  5.lvl  6.lvl  7.lvl  8.lvl  9.lvl
data/theme1/: blueDoor.itm  greenDoor.itm  greenGem.itm  greenKey.itm  hardWall.itm  (+7 more)
include/: AnimFrame.hpp  AnimSequence.hpp  AudioExceptions.hpp  Counter.hpp  Game.hpp  GemsNRocks.hpp  Grid.hpp  Icon.hpp  Image.hpp  InfoBar.hpp  ItemFactory.hpp  Menu.hpp  Player.hpp  Resource.hpp  SdlAudio.hpp  TextBox.hpp  xException.hpp
src/: AnimSequence.cpp  Counter.cpp  Game.cpp  GemsNRocks.cpp  Grid.cpp  Icon.cpp  Image.cpp  InfoBar.cpp  ItemFactory.cpp  Main.cpp  Menu.cpp  Player.cpp  Resource.cpp  SdlAudio.cpp  TextBox.cpp  xException.cpp
(+67 files in other folders)
